--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
-*.css linguist-detectable=true
+*.css linguist-detectable=false
 *.java linguist-detectable=false
-*.python linguist-detectable=true 
-*.js linguist-detectable=true
-*.html linguist-detectable=true
+*.python linguist-detectable=false 
+*.js linguist-detectable=false
+*.html linguist-detectable=false
 *.xml linguist-detectable=false
+*.django linguist-detectable=true
