--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.css linguist-detectable=false
+*.pandas linguist-detectable=false
 *.java linguist-detectable=false
 *.python linguist-detectable=false 
 *.js linguist-detectable=false
